src/test/ui/generator/auto-trait-regions.stderr
error: implementation of `Foo` is not general enough
  --> $DIR/auto-trait-regions.rs:30:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^
   |
   = note: `&'0 OnlyFooIfStaticRef` must implement `Foo` for any lifetime `'0`
   = note: but `&'1 OnlyFooIfStaticRef` only implements `Foo` for the lifetime `'1`

error: implementation of `Foo` is not general enough
  --> $DIR/auto-trait-regions.rs:48:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^
   |
   = note: `A<'0, '1>` must implement `Foo` for any two lifetimes `'0` and `'1`
   = note: but `A<'_, '2>` only implements `Foo` for the lifetime `'2`

error: aborting due to 2 previous errors

